# OpenCLVoxelizer

./: .gitignore  CMakeLists.txt  README.md
model/: Dolphin.stl  Glenoid.stl  Reamer.stl  Suzanne.stl
src/Bit-Masking/: Bit-Masking.cl  Bit-Masking.cxx
src/Cube-Based/: Cube-Based.cl  Cube-Based.cxx
src/Max-Memory/: Max-Memory.cl  Max-Memory.cxx
src/SAT/: SAT.cl  SAT.cxx
src/Seidel/: Seidel.cl  Seidel.cxx
